--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
     font-family: var(--font-family);
     overflow-x: hidden;
     background-color: var(--main-backgroud);
-    font-size: clamp(0.813rem, 1vw + 0.8rem, 1rem);
+    font-size: clamp(0.813rem, 1vw + 0.8rem, .9rem);
     min-height: 100vh;
     display: flex;
     justify-content: center;
@@ -40,8 +40,8 @@ body {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(1, max-content);
-    grid-column-gap: 1rem;
-    grid-row-gap: 1rem;
+    grid-column-gap: 2rem;
+    grid-row-gap: 2rem;
     padding: 2rem;
 }
 
@@ -59,6 +59,17 @@ body {
 .card:nth-child(1) {
     background-color: var(--primary-purple-500);
     color: var(--neutral-white);
+    position: relative;
+    z-index: 0;
+
+}
+
+.card:nth-child(1) .quotation-background {
+    position: absolute;
+    width: 102px;
+    top: 0;
+    right: 10%;
+    z-index: -1;
 }
 
 .card:nth-child(1) .title,
@@ -142,13 +153,14 @@ body {
 }
 
 .user-title {
-    font-size: 0.688rem;
+    font-size: rem;
+    font-size: clamp(0.688rem, 1vw + 0.5rem, .8rem);
     line-height: 110%;
     color: inherit;
 }
 
 .card .title {
-    font-size: 1.25rem;
+    font-size: clamp(1.25rem, 1vw + 1rem, 1.6rem);
     font-weight: 600;
     line-height: 120%;
 }
@@ -197,7 +209,7 @@ body {
 @media screen and (min-width: 1440px) {
     .testimonials {
         grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: repeat(2, 1fr);
+        grid-template-rows: repeat(2,  max-content);
         padding: 2rem 8rem;
     }
 
@@ -231,6 +243,7 @@ body {
 
 @media screen and (min-width: 2560px) {
     .testimonials {
+        grid-row-gap: 1.5rem;
         padding: 2rem 20rem;
     }
 }
