--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ body {
 
 .card:nth-child(1) .quotation-background {
     position: absolute;
-    width: 102px;
+    width: 6.5rem;
     top: 0;
     right: 10%;
     z-index: -1;
