--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body {
     font-family: var(--font-family);
     overflow-x: hidden;
     background-color: var(--main-backgroud);
-    font-size: clamp(0.813rem, 1vw + 0.8rem, .9rem);
+    font-size: clamp(0.813rem, 1vw + 0.8rem, 1rem);
     min-height: 100vh;
     display: flex;
     justify-content: center;
@@ -208,34 +208,34 @@ body {
 
 @media screen and (min-width: 1440px) {
     .testimonials {
-        grid-template-columns: repeat(5, 1fr);
+        grid-template-columns: repeat(12, 1fr);
         grid-template-rows: repeat(2,  max-content);
         padding: 2rem 8rem;
     }
 
     .card:nth-child(1) {
         grid-row: 1 / 2;
-        grid-column: 1 / 4;
+        grid-column: 1 / 7;
     }
 
     .card:nth-child(2) {
         grid-row: 1 / 2;
-        grid-column: 4 / 5;
+        grid-column: 7 / 10;
     }
 
     .card:nth-child(3) {
         grid-row: 2 / 3;
-        grid-column: 1 / 2;
+        grid-column: 1 / 4;
     }
 
     .card:nth-child(4) {
         grid-row: 2 / 3;
-        grid-column: 2 / 5;
+        grid-column: 4 / 10;
     }
 
     .card:nth-child(5) {
         grid-row: 1 / 3;
-        grid-column: 5 / 6;
+        grid-column: 10 / 13;
     }
 
 }
