--- a/styles.css
+++ b/styles.css
@@ -148,15 +148,16 @@ body {
     overflow: hidden;
 }
 
-.user-name {
+.card .info .user-name {
     line-height: 110%;
 }
 
-.user-title {
+.card .info .user-title {
     font-size: clamp(0.688rem, 1vw + 0.5rem, .7rem);
     line-height: 110%;
     color: inherit;
 }
+
 
 .card .title {
     font-size: clamp(1.25rem, 1vw + 1rem, 1.3rem);
@@ -165,10 +166,9 @@ body {
 }
 
 .card .content {
-    margin-top : 1rem;
+    margin-top: 1rem;
     line-height: 140%;
 }
-
 
 
 
@@ -209,7 +209,7 @@ body {
 @media screen and (min-width: 1440px) {
     .testimonials {
         grid-template-columns: repeat(12, 1fr);
-        grid-template-rows: repeat(2,  max-content);
+        grid-template-rows: repeat(2, max-content);
         padding: 2rem 8rem;
     }
 
