--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,10 @@
     --neutral-grey-500: hsl(217, 19%, 35%);
     --neutral-dark-blue: hsl(219, 29%, 14%);
     --neutral-black: hsl(0, 0%, 7%);
-    --main-backgroud: #F6F5F6;
+    --neutral-piege: #F6F5F6;
     --font-family: 'Barlow Semi Condensed', sans-serif;
+
+    --shadow: 40px 60px 50px -47px rgba(72, 85, 106, 24.74%);
 }
 
 *,
@@ -28,7 +30,7 @@
 body {
     font-family: var(--font-family);
     overflow-x: hidden;
-    background-color: var(--main-backgroud);
+    background-color: var(--neutral-piege);
     font-size: clamp(0.813rem, 1vw + 0.8rem, .9rem);
     min-height: 100vh;
     display: flex;
@@ -53,7 +55,7 @@ body {
     gap: 1rem;
     padding: 2rem;
     border-radius: .6rem;
-    box-shadow: 40px 60px 50px -47px rgba(72, 85, 106, 24.74%);
+    box-shadow: var(--shadow)
 }
 
 .card:nth-child(1) {
@@ -172,7 +174,7 @@ body {
 
 
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
     .testimonials {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(4, max-content);
@@ -180,22 +182,22 @@ body {
     }
 
     .card:nth-child(1) {
-        grid-row: 1 / 1;
+        grid-row: 1 / 2;
         grid-column: 1 / 6;
     }
 
     .card:nth-child(2) {
-        grid-row: 2 / 2;
+        grid-row: 2 / 3;
         grid-column: 1 / 3;
     }
 
     .card:nth-child(3) {
-        grid-row: 2 / 2;
+        grid-row: 2 / 3;
         grid-column: 3 / 6;
     }
 
     .card:nth-child(4) {
-        grid-row: 3 / 3;
+        grid-row: 3 / 4;
         grid-column: 1 / 6;
     }
 
@@ -206,7 +208,7 @@ body {
 
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 90rem) {
     .testimonials {
         grid-template-columns: repeat(12, 1fr);
         grid-template-rows: repeat(2, max-content);
@@ -241,7 +243,7 @@ body {
 }
 
 
-@media screen and (min-width: 2560px) {
+@media screen and (min-width: 160rem) {
     .testimonials {
         grid-row-gap: 1.5rem;
         padding: 2rem 20rem;
