fix: enhance card styles and improve semantic structure for testimonials section

--- a/styles.css
+++ b/styles.css
@@ -58,15 +58,12 @@ body {
     box-shadow: var(--shadow)
 }
 
-.card:nth-child(1) {
-    background-color: var(--primary-purple-500);
-    color: var(--neutral-white);
+.quotation-background {
     position: relative;
     z-index: 0;
-
 }
 
-.card:nth-child(1) .quotation-background {
+.quotation-background .quotation-background-img {
     position: absolute;
     width: 6.5rem;
     top: 0;
@@ -74,65 +71,49 @@ body {
     z-index: -1;
 }
 
-.card:nth-child(1) .title,
-.card:nth-child(1) .user-name {
-    color: var(--primary-purple-50);
+.card-purple {
+    background-color: var(--primary-purple-500);
+    color: var(--neutral-white);
 }
 
-.card:nth-child(2) {
+.card-grey-light {
     background-color: var(--neutral-grey-500);
     color: var(--neutral-grey-100);
 }
 
-.card:nth-child(2) .title,
-.card:nth-child(2) .user-name {
-    color: var(--neutral-white);
-}
-
-.card:nth-child(3) {
+.card-white {
     background-color: var(--neutral-white);
     color: var(--neutral-grey-400);
 }
 
-.card:nth-child(3) .title,
-.card:nth-child(3) .user-name {
-    color: var(--neutral-grey-500);
-}
-
-.card:nth-child(4) {
+.card-grey-dark {
     background-color: var(--neutral-dark-blue);
     color: var(--neutral-grey-100);
 }
 
-.card:nth-child(4) .title,
-.card:nth-child(4) .user-name {
-    color: var(--neutral-grey-200);
-}
-
-.card:nth-child(5) {
-    background-color: var(--neutral-white);
-    color: var(--neutral-grey-400);
-}
-
-.card:nth-child(5) .title,
-.card:nth-child(5) .user-name {
-    color: var(--neutral-grey-400);
-}
-
-.card:nth-child(1) .content {
+.text-purple-light {
     color: var(--primary-purple-50);
 }
 
-.card:nth-child(2) .content,
-.card:nth-child(4) .content {
+.text-grey-lighter {
     color: var(--neutral-grey-100);
 }
 
-.card:nth-child(3) .content,
-.card:nth-child(5) .content {
+.text-grey-light {
+    color: var(--neutral-grey-200);
+}
+
+.text-grey-dark {
     color: var(--neutral-grey-400);
 }
 
+.text-grey-darker {
+    color: var(--neutral-grey-500);
+}
+
+.text-white {
+    color: var(--neutral-white);
+}
 
 .card .info {
     display: flex;
@@ -140,7 +121,6 @@ body {
     justify-content: flex-start;
     align-items: center;
 }
-
 
 .card .info img {
     width: 3rem;
@@ -171,8 +151,6 @@ body {
     margin-top: 1rem;
     line-height: 140%;
 }
-
-
 
 @media screen and (min-width: 48rem) {
     .testimonials {
@@ -241,7 +219,6 @@ body {
     }
 
 }
-
 
 @media screen and (min-width: 160rem) {
     .testimonials {
