--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,46 @@ body {
     box-shadow: var(--shadow)
 }
 
+.card .info {
+    display: flex;
+    gap: 1rem;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.card .info img {
+    width: 3rem;
+    object-fit: cover;
+    border: .2rem solid var(--primary-purple-50);
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.card .info .user-name {
+    line-height: 110%;
+}
+
+.card .info .user-title {
+    font-size: clamp(0.688rem, 1vw + 0.5rem, .7rem);
+    line-height: 110%;
+    color: inherit;
+}
+
+
+.card .title {
+    font-size: clamp(1.25rem, 1vw + 1rem, 1.3rem);
+    font-weight: 600;
+    line-height: 120%;
+}
+
+.card .content {
+    margin-top: 1rem;
+    line-height: 140%;
+}
+
+
+/* globals */
+
 .quotation-background {
     position: relative;
     z-index: 0;
@@ -115,43 +155,7 @@ body {
     color: var(--neutral-white);
 }
 
-.card .info {
-    display: flex;
-    gap: 1rem;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.card .info img {
-    width: 3rem;
-    object-fit: cover;
-    border: .2rem solid var(--primary-purple-50);
-    border-radius: 50%;
-    overflow: hidden;
-}
-
-.card .info .user-name {
-    line-height: 110%;
-}
-
-.card .info .user-title {
-    font-size: clamp(0.688rem, 1vw + 0.5rem, .7rem);
-    line-height: 110%;
-    color: inherit;
-}
-
-
-.card .title {
-    font-size: clamp(1.25rem, 1vw + 1rem, 1.3rem);
-    font-weight: 600;
-    line-height: 120%;
-}
-
-.card .content {
-    margin-top: 1rem;
-    line-height: 140%;
-}
-
+/* media screens */
 @media screen and (min-width: 48rem) {
     .testimonials {
         grid-template-columns: repeat(4, 1fr);
